# cpp-semester-5

./: .gitignore  CMakeLists.txt
task_1/: main.cpp
task_2/: main.cpp  sort.h  utils.h
task_3/: box.cpp  box.h  editor.cpp  editor.h  main.cpp  utils.h
task_4/: assembler.cpp  assembler.h  ast_node.cpp  ast_node.h  main.cpp  visitor.h
